@@ -19,6 +19,8 @@
 	- Fix Integer Underflow in Regional Allocator,
 	  reported by X41 D-Sec.
 	- Upgrade compat/getentropy_linux.c to version 1.46 from OpenBSD.
+	- Synchronize compat/getentropy_win.c with version 1.5 from
+	  OpenBSD, no changes but makes the file, comments, identical.
 
 19 November 2019: Wouter
 	- Fix CVE-2019-18934, shell execution in ipsecmod.
